--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "simplesoftwareio/simple-qrcode": "^2.0"
